# rust-faas-serverless

./: README.md
rustfaas/: Cargo.toml
rustfaas/src/: add.rs  main.rs
rustfaascli/: Cargo.toml
rustfaascli/src/: main.rs
