[package]
name = "rustfaascli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
libloading = "0.7"
futures-util = "0.3.28"
anyhow = "1.0.75"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread", "rt"] }
reqwest = { version = "0.11.11", features = ["blocking","stream","multipart","json"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
